Fixed LocationPicker CSS Dropdown/Overflow

--- a/client/locations.module.scss
+++ b/client/locations.module.scss
@@ -1,46 +1,44 @@
 .currentRegion {
   font-family: Helvetica;
-}
-
-.locationtable {
   display: flex;
-  background: #fff;
-  box-shadow: 0 0 0 1px rgba(0,0,0,.1);
-  margin: 2px;
-  border-radius: 3px;
-  top: 90%;
-  left: 5px
 }
 
-.overflowMetro {
-  background: #fff!important;
-  // display: inline-block;
-  overflow: auto;
-  // position: relative;
-  -webkit-overflow-scrolling: touch;
-  padding: 0px;
-  width: 200px;
-  height: 400px;
-  left: 50%;
-  margin-left: -10px;
-  .selector {
-    color: #999!important;
-    border-left: 3px solid transparent;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-  }
-  .selected {
-    color: #237b98!important;
-    background: #eef4fb;
-    border-color: #237b98;
+.showLocationMenu {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 0px; 
+  z-index: 1;
+  .overflowMetro {
+    padding: 0px; 
+    width: 316px; 
+    height: 400px;
+    z-index: 1;
+    overflow: auto;
+    li {
+      display: flex;
+      flex-direction: column;
+      .selector {
+        color: #999!important;
+        border-left: 3px solid transparent;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+      }
+      .selected {
+        color: #237b98!important;
+        background: #eef4fb;
+        border-color: #237b98;
+      }
+    }
   }
 }
 
-.overflowRegion {
-  @extend .overflowMetro;
-  // position: relative;
-}
+
+// .overflowRegion {
+//   @extend .overflowMetro;
+// }
 
 // scraped:
 
